add atone.js into project

--- a/AtoneCon/Support/pageSample.html
+++ b/AtoneCon/Support/pageSample.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script src="https://auth.atone.be/v1/atone.js"></script>
+<!--        <script src=""></script>-->
+        <script type="text/javascript" src="./Support/atone.js"></script>
     </head>
     <title>ページタイトル</title>
     <body>
@@ -99,8 +100,7 @@
 
             var button = document.getElementById("atone-button"); button.addEventListener("click", function(e) {
                     Atone.start(); // クリック時にモーダルを立ち上げる。
-                },
-                false)
-            </script>
+                }, false)
+        </script>
     </body>
 </html>
