edit public_key in atone.html

--- a/AtoneCon/Support/atone.html
+++ b/AtoneCon/Support/atone.html
@@ -79,7 +79,7 @@
 
             Atone.config({
                 pre_token: "W2yAg_sHhOUbNdXTafe_f23B",
-                pub_key: "7jqf-uzmxDnJoOwpw8smUQ",
+                pub_key: "bB2uNvcOP2o8fJzHpWUumA",
                 payment: data,
                 // 認証が完了したタイミングで呼び出し
                 authenticated: function(authentication_token) {
