- add indicator - create color define

--- a/AtoneCon/Resources/www/atone.html
+++ b/AtoneCon/Resources/www/atone.html
@@ -10,6 +10,6 @@
         </script>
     </head>
     <title>ページタイトル</title>
-    <body>
+    <body style="background-color:rgba(0, 0, 0, 0.9);">
     </body>
 </html>
